objects/Case.object
<CustomObject>
    <fields>
        <fullName>CurrencyDisplay__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentQID__c</fullName>
        <label>CurrentQID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Value_Configuration__c</fullName>
        <description>Current Value configuration</description>
        <label>Current Value/Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Problem_Solve_Time__c</fullName>
        <label>Customer Problem Solve Time (Hrs)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_to_Close__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Closed Date- Created Date = Duration Open</inlineHelpText>
        <label>Cycle Time to Close (Days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Danfoss_Division__c</fullName>
        <label>Danfoss Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Danfoss_Drives_Sub_Segment__c</fullName>
        <formula>Account.Danfoss_Drives_Sub_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Drives Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Note__c</fullName>
        <label>Delivery Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Change__c</fullName>
        <inlineHelpText>Please explain what type of change needs to be made.</inlineHelpText>
        <label>Description of Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Comments__c</fullName>
        <inlineHelpText>Describe Development Changes</inlineHelpText>
        <label>Development Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Drive_FC051_VLT_2800_or_KVA_7_5_MCD_200__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable for Drive segment only.</inlineHelpText>
        <label>Drive FC051/VLT 2800 or KVA &lt;7.5/MCD 200</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drive_Fault_Code_Description__c</fullName>
        <description>Fault Code for Danfoss Drives</description>
        <inlineHelpText>Internal Danfoss code to identify the problem with the Drive/ System. This is applicable to Danfoss Drives only.</inlineHelpText>
        <label>Drive Fault Code/ Description</label>
        <picklist>
            <picklistValues>
                <fullName>F-101 - Input  Fuses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-105 - Heatsink Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-106 - Door Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-107 - Fan Power Supply (Fan Transfomer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-10 - Inverter IGBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-114 - Soft Charge card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-115 - Power Card All series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-116 - SMPS Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-137 - Control Card All series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-138 - LCP all Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-139 - Transducer card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-145 - Current Scalling Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-15 - Brake IGBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-16 - IGBT/SCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-184  - Gate Driver Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-201 - MCA 101-Profibus optin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-203 - MCA 104 -Device net Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-204 - MCA 121-Ethernet optoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-209 - MCA 103-Bacnet Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-20 - Rectifier /SCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-21 - Bus Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-220 - MCO 305 Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-222 - MCB 102 -Encoder option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-223 - MCB 101 General Purpose I/P card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-225  - MCB 103-Resolver option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-234 - MCB 109 -Analog I/O option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-290  - VFD (upto 7.5KW) all series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-294 - Brake Resistor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-299  - Software Upgradation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-300 - Loose connection inside VFD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Date case is requested to be completed</description>
        <inlineHelpText>Enter the date you wish this to be finalized by.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <description>Field to estimate the effort required to complete a Case through to Production</description>
        <inlineHelpText>How complex is the solution to this case?</inlineHelpText>
        <label>Estimated Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>External Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRF_Form_Number__c</fullName>
        <label>FRF Form Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_with_Customer_Made_on__c</fullName>
        <label>First Contact with Customer Time (Hrs)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact_with_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Contact with Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_of_Charge_for_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identify whether the document/ service is chargeable to Customer.</inlineHelpText>
        <label>Free of Charge for Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoryQID__c</fullName>
        <label>HistoryQID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITCM_number__c</fullName>
        <description>ITCM number</description>
        <inlineHelpText>Enter ITCM number</inlineHelpText>
        <label>ITCM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InDev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code or Configuration changes are in the Dev environment</description>
        <inlineHelpText>Code or Configuration change is in any Development Sandbox</inlineHelpText>
        <label>DEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InPROD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code or Config change is in Production Environment</description>
        <label>PROD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InUAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code or config changes is in UAT</description>
        <inlineHelpText>Code or configuration changes are in the UAT sandbox</inlineHelpText>
        <label>UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Remittance_Reason__c</fullName>
        <label>Late Remittance Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Type of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>New CRM User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Migration__c</fullName>
        <description>List of elements requiring manual migration.</description>
        <inlineHelpText>List of elements requiring manual migration.</inlineHelpText>
        <label>Manual Migration</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value_Configuration__c</fullName>
        <description>new value configuration</description>
        <label>New Value/Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_orders_to_be_updated__c</fullName>
        <inlineHelpText>Are there open orders to be updated?</inlineHelpText>
        <label>Open orders to be updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Attribute__c</fullName>
        <description>C&amp;E field
Affects CSC (Cases) and Core CRM (Lead and Opportunity Management)</description>
        <inlineHelpText>Applicable for Country specific projects. E.g. India cold chain project</inlineHelpText>
        <label>Opportunity Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>RC Product Launch Plan China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Selling Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Chain India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin_Prior_Value__c</fullName>
        <description>Contains prior value of the Case.Origin field, used and triggered by Process Builder &quot;CE CSC Send Case Confirmation Email&quot;</description>
        <label>Origin Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Change_Set__c</fullName>
        <inlineHelpText>Name of Outbound Change Set.</inlineHelpText>
        <label>Outbound Change Set</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <inlineHelpText>Customer&apos;s Purchase Order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>Customer&apos;s Purchase Order number</inlineHelpText>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_AM_Task_Sent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to true when Pricing task for account manager is created when case is closed</description>
        <label>Pricing AM Task Sent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_CSR_Task_Sent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to true when Pricing CSR task is created</description>
        <label>Pricing CSR Task Sent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Stage__c</fullName>
        <description>For Power Solutions Pricing Cases</description>
        <inlineHelpText>Current stage of Annual Pricing Adjustment. Not used for other types of pricing cases.</inlineHelpText>
        <label>Pricing Stage</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>(1) APA Negotiation Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Pricing Review and Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) CPL/MQ requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) CPL/MQ Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(5) CPL/MQ Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_CSC_Contact__c</fullName>
        <description>This CSC field references the &quot;CSC Main Contact Text&quot; field on the related Account  when not assigned to one of the Queue Id’s designated by the formula, otherwise it references the “Primary Queue Contact” field on the Case. The &quot;CSC Main Contact Text&quot; field is populated by Process Builder process &quot;CE CSC Primary CSC Contact on Case Process&quot; that inserts the value of the &quot;CSC Main Contact NVM&quot; field from the Account. This field is not to be added to any page layouts but only to be visible in the CSC CER List Views. The same goes for the “Primary Queue Contact” field which is populated by the &quot;CE CSC Primary CSC Contact on Case Process 2&quot; process, which inserts the primary contact according to which Queue it is owned by.</description>
        <formula>IF(
OR(
Contains($Setup.Primary_CSC_Queue_Ids__c.Cooling_Commercial__c, Owner:Queue.Id),
Contains($Setup.Primary_CSC_Queue_Ids__c.Cooling_Technical__c, Owner:Queue.Id),
Contains($Setup.Primary_CSC_Queue_Ids__c.Heating_Commercial__c, Owner:Queue.Id),
Contains($Setup.Primary_CSC_Queue_Ids__c.Heating_Technical__c, Owner:Queue.Id),
Contains($Setup.Primary_CSC_Queue_Ids__c.Drives_Commercial__c, Owner:Queue.Id)),
Primary_Queue_Contact__c,
IF(
Contains($Setup.Primary_CSC_Queue_Ids__c.Drives_Technical__c, Owner:Queue.Id),
Primary_Queue_Contact_Drives_2nd_Line__c,
Account.CSC_Main_Contact_Text__c))</formula>
        <label>Primary CSC Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Queue_Contact_Drives_2nd_Line__c</fullName>
        <description>Populated by the &quot;CSC Primary Contact Update Drives 2nd Line&quot; Flow with the DDS: Inside Sales Account Team Member when the Case is owned by Drives Second Line Queue</description>
        <label>Primary Queue Contact Drives 2nd Line</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Queue_Contact__c</fullName>
        <description>Populated by Process Builder process: &quot;CE CSC Primary CSC Contact on Case Process 2&quot;. Contains the Primary Contact depending on which Queue owns the record. This field is referenced by the &quot;Primary CSC Contact&quot; formula field on the Case.</description>
        <label>Primary Queue Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>Production Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFC_Message_Id__c</fullName>
        <description>CSC - For Cases created via email to case, the trigger on email message object would extract the Message Id and store it here so that it can be used for duplicate check later.
(Hidden Field)</description>
        <externalId>true</externalId>
        <label>RFC Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RF_Number__c</fullName>
        <description>Remedy Force reference number</description>
        <inlineHelpText>Remedy Force reference number</inlineHelpText>
        <label>RF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>Business_Org__c</controllingField>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <inlineHelpText>Select all objects impacted by this change.</inlineHelpText>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AllMID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Roll Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Part Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Model Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyComatrol</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <inlineHelpText>Reason for re opening the case. Only active when Case Status is selected as Reopen.</inlineHelpText>
        <label>Reopen Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Incorrect Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed by Supplier/Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer delayed confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Failure Analysis Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Internal_Users__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor (Internal Users)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InternalCSCRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_of_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that requested the change</description>
        <inlineHelpText>Fill in the user that requested this change</inlineHelpText>
        <label>Requestor of Change</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <inlineHelpText>Detailed resolution/ solution provided</inlineHelpText>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Acct_ID__c</fullName>
        <description>PS SAP Account ID</description>
        <formula>Account.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Record_Id__c</fullName>
        <inlineHelpText>Use this field to store SAP Order Number, Invoice Number, Quote Number, etc.</inlineHelpText>
        <label>SAP Record Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Role__c</fullName>
        <label>Salesforce Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <inlineHelpText>Enter the extension of the sandbox this configuration is in.</inlineHelpText>
        <label>Sandbox</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Warranty_Type__c</fullName>
        <inlineHelpText>Identify whether Service Request is covered within Warranty and select the appropriate Warranty Type.</inlineHelpText>
        <label>Service Warranty Type</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Comprehensive AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Comprehensive AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Person_Name__c</fullName>
        <label>Site Contact Person Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Person_Number__c</fullName>
        <label>Site Contact Person Number</label>
        <type>Phone</type>
    </fields>
</CustomObject>